--- a/Views/Books/Create.cshtml
+++ b/Views/Books/Create.cshtml
@@ -24,7 +24,8 @@
             </div>
             <div class="form-group">
                 <label asp-for="Price" class="control-label"></label>
-                <input asp-for="Price" class="form-control" />
+                @* <input asp-for="Price" class="form-control" /> *@
+                @Html.EditorFor(m => m.Price)
                 <span asp-validation-for="Price" class="text-danger"></span>
             </div>
             <div class="form-group">
