--- a/Views/Books/Details.cshtml
+++ b/Views/Books/Details.cshtml
@@ -9,7 +9,10 @@
 <div>
     <h4>Book</h4>
     <hr />
-    <dl class="row">
+
+    @Html.DisplayForModel()
+
+    @* <dl class="row">
         <dt class = "col-sm-2">
             @Html.DisplayNameFor(model => model.Isbn)
         </dt>
@@ -46,7 +49,7 @@
         <dd class = "col-sm-10">
             @Html.DisplayFor(model => model.Sample)
         </dd>
-    </dl>
+    </dl> *@
 </div>
 <div>
     <a asp-action="Edit" asp-route-id="@Model?.Id">Edit</a> |
